syntax = "proto3";

package acs8;

import "aelf/core.proto";
import "aelf/options.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option (aelf.identity) = "acs8";

service ResourceConsumptionContract {
    // Actions
    rpc SetResourceConsumptionAmount (SetResourceConsumptionAmountInput) returns (google.protobuf.Empty) {
    }

    // Views
    rpc GetResourceConsumptionAmount (google.protobuf.StringValue) returns (ResourceConsumptionAmount) {
        option (aelf.is_view) = true;
    }
}

message ResourceConsumptionAmount {
    map<string, sint64> symbol_to_amount = 1;
}

message SetResourceConsumptionAmountInput {
    string method = 1;
    map<string, sint64> symbol_to_amount = 2;
}